Sun Apr 10 19:38:22 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/Plan_Launcher/LM_Launcher.h:
        * dance/Plan_Launcher/LM_Launcher.cpp:
        * dance/Plan_Launcher/Plan_Launcher.cpp:
        * dance/Plan_Launcher/Plan_Launcher.mpc:
        * dance/Plan_Launcher/Plan_Launcher_Base_Impl_T.cpp:

          Add capability to launch directly to the LocalityManager.

Sun Apr 10 17:37:43 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Logger_Backend/ndds/NDDS_Logger.mpc:
          Fixed base project due to ndds base project changes

Sat Apr  9 17:47:00 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        Merged changes from Remedy work branch.

        === start changelog ===

        Thu Apr  7 12:24:30 UTC 2011  Marcel Smit  <msmit@remedy.nl>

                * dance/DomainApplicationManager/Node_Locator.cpp:
                  Removed comma after DLINFO in a log message. Therefor the message
                  will be logged properly.

        === end changelog ===

Sat Apr  9 11:36:47 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/LocalityManager/Daemon/Locality_Manager_Impl.cpp:

          Warning.

Sat Apr  9 01:41:40 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/DomainApplication/Domain_Application_Impl.cpp:

          Improved error handling.

        * dance/LocalityManager/Daemon/Locality_Manager_Impl.cpp:

          Remove logic that installed error handler interceptors outside of
          a localityconfig file.

Sat Apr  9 01:41:02 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * dance/Logger/Logger_Service.cpp:

          Add command line option for backend selection.

Thu Apr  7 22:06:23 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>

        * docs/DAnCE_Logging.txt:

          Documentation of logging service.

Thu Apr  7 12:45:08 UTC 2011  William R. Otte  <wotte@dre.vanderbilt.edu>
